# Asteroids

./: 2body.py  3body.py  3body_realistic.py  CMakeDoxygen.txt  CMakeLists.txt  README.md  asteroid.py
src/: main.cpp
src/Utils/: Body.h  Constants.h  Gravity.h  Integrators.h  SpaceMechanics.h
